--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             <input type="text" value="">
                                         </div>
                                         <hr></hr>
-                                        <button type="submit" class="submit-btn">Deposit</button>
+                                        <!-- <button type="submit" class="submit-btn">Deposit</button> -->
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                                             <input type="text" value="">
                                         </div>
                                         <hr></hr>
-                                        <button type="submit" class="submit-btn">Deposit</button>
+                                        <!-- <button type="submit" class="submit-btn">withdraw</button> -->
                                     </div>
                                 </div>
                             </div>
@@ -156,6 +156,7 @@
         function withdrawMax(countid){
             document.getElementById('withMax').value = countid;
         }
+       
     </script>
 </body>
 </html>
